Refactored admin related pages, deleted unnecessary whitespace and moved declarations into the correct files

--- a/public/css/ClinicianDash.css
+++ b/public/css/ClinicianDash.css
@@ -81,6 +81,12 @@ html,body {
     opacity: 1 !important;
 }
 
+.buttons {
+    margin: 0.8%;
+    text-align: center;
+    float: right;
+}
+
 input[type=number], select {
     width: 100%;
     padding: 12px 20px;
